--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -29,10 +29,10 @@
                 <fieldset class="form-group">
                     <br />or
                     <a href="/register">Register Here</a><br />
-                    <button type="submit" class="btn btn-success" value="Login" style="color:black">
+                    <button type="submit" class="btn btn-success" value="Login" style="background-color:green;color:black">
                         <i class="fa-solid fa-right-to-bracket"></i> Login</button>
                     <a href="/"></a>
-                        <a href="/" class="btn btn-warning" style="background-color:red">
+                        <a href="/" class="btn" style="background-color:red">
                         <i class="fas fa-undo"></i> Cancel </a>
                     </a>
                 </fieldset>
