--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -7,9 +7,7 @@
         <%= message %>
     </div>
     <% } %>
-
-
-        <div class="loginPage">
+        <div class="registerPage">
             <h1 class="listTitle"> Please Register </h1>
             <form method="post" autocomplete="off">
                 <fieldset class="form-group">
@@ -41,9 +39,9 @@
                     id="displayName" required>
                 </fieldset><br>
                 <fieldset class="form-group text-right">
-                    <button type="submit" class="btn btn-success" value="Register" style="color:black"> 
+                    <button type="submit" class="btn" value="Register" style="background-color:green;color:black"> 
                         <i class="fa-solid fa-user-plus"></i> Register</button>
-                    <a href="/" class="btn btn-warning" style="background-color:red">
+                    <a href="/" class="btn" style="background-color:red">
                         <i class="fas fa-undo"></i> Cancel </a>
                 </fieldset>
             </form>
