--- a/server/views/movie/edit.ejs
+++ b/server/views/movie/edit.ejs
@@ -70,10 +70,10 @@
             </div>
             <br>
             <!-- green submit button-->
-            <button class="btn" type="submit" style="background-color:green"> 
+            <button class="btn" type="submit" style="background-color:green; color:black"> 
                 <i class="fas fa-edit"></i> Apply Changes</button>
 
-            <a href="/blockbuster" class="btn btn-warning" style="background-color:red">
+            <a href="/blockbuster" class="btn" style="background-color:red; color:black">
                 <i class="fas fa-undo"></i> Cancel </a>
         </form>
     </div>
