--- a/server/views/movie/add.ejs
+++ b/server/views/movie/add.ejs
@@ -59,11 +59,11 @@
                 </div>
                 <br>
                 <!-- submit button with a background color of green-->
-                <button class="btn btn-primary" type="submit" style="background-color:green"> 
+                <button class="btn btn-success" type="submit" style="background-color:green; color:black"> 
                     <i class="fas fa-edit"></i> Submit </a> 
                 </button>
 
-                <a href="/blockbuster" class="btn btn-warning">
+                <a href="/blockbuster" class="btn" style="background-color:red; color:black">
                     <i class="fas fa-undo"></i> Cancel </a>
             </form>
         </div>
