--- a/server/views/movie/list.ejs
+++ b/server/views/movie/list.ejs
@@ -4,35 +4,35 @@
       <div class="row">
         <div class="col-md-offset-3 col-md-12"> <!--web page can contain max of 8 columns, if you want to change it, change col-md-8-->
             <h1 class="listTitle"><%= title %></h1>
-            <% if(typeof username=='string' && username) { %>
             <br>
-            <a href="/blockbuster/add" class="btn btn-primary" role="button">
-              <i class="fas fa-plus-circle"></i> Rent a Movie </a>
+            <% if (typeof username=='string' && username) { %>
+              <a href="/blockbuster/add" class="btn btn-primary" role="button">
+                <i class="fas fa-plus-circle"></i> Rent a Movie </a>
+            <% } %>
             <br>
-            <%} %>
             <br>
       
       <!-- displays the table headers (th) and displays table content (td)-->
       <table class="table table-bordered table-striped table-hover"  style="border: 2px solid #FFCC00">
       <% if(typeof username=='string' && username) { %>
-      <tr> 
-        <th class="text-center col-2" style="background-color:#FFCC00"> User </th>
-        <th class="text-center col-2" style="background-color:#FFCC00"> Subscription Tier </th>
-        <th class="text-center col-2" style="background-color:#FFCC00"> Movie Name </th>
-        <th class="text-center col-1" style="background-color:#FFCC00"> Rent Date </th>
-        <th class="text-center col-2" style="background-color:#FFCC00"> Return Date </th>
-        <th class="text-center col-1" style="background-color:#FFCC00"> Edit </th>
-        <th class="text-center col-1" style="background-color:#FFCC00"> Delete </th>
-      </tr>
-      <% } else { %>
-      <tr> 
-        <th class="text-center col-2" style="background-color:#FFCC00"> User </th>
-        <th class="text-center col-2" style="background-color:#FFCC00"> Subscription Tier </th>
-        <th class="text-center col-2" style="background-color:#FFCC00"> Movie Name </th>
-        <th class="text-center col-1" style="background-color:#FFCC00"> Rent Date </th>
-        <th class="text-center col-2" style="background-color:#FFCC00"> Return Date </th>
+        <tr> 
+          <th class="text-center col-2" style="background-color:#FFCC00"> User </th>
+          <th class="text-center col-2" style="background-color:#FFCC00"> Subscription Tier </th>
+          <th class="text-center col-2" style="background-color:#FFCC00"> Movie Name </th>
+          <th class="text-center col-1" style="background-color:#FFCC00"> Rent Date </th>
+          <th class="text-center col-2" style="background-color:#FFCC00"> Return Date </th>
+          <th class="text-center col-1" style="background-color:#FFCC00"> Edit </th>
+          <th class="text-center col-1" style="background-color:#FFCC00"> Delete </th>
         </tr>
-        <% } %>
+      <% } else { %>
+        <tr> 
+          <th class="text-center col-2" style="background-color:#FFCC00"> User </th>
+          <th class="text-center col-2" style="background-color:#FFCC00"> Subscription Tier </th>
+          <th class="text-center col-4" style="background-color:#FFCC00"> Movie Name </th>
+          <th class="text-center col-2" style="background-color:#FFCC00"> Rent Date </th>
+          <th class="text-center col-2" style="background-color:#FFCC00"> Return Date </th>
+          </tr>
+      <% } %>
 
       <% for(let count=0; count<MovieList.length; count++) { %> 
         <tr> 
@@ -43,26 +43,22 @@
             <td class="text-center col-2" style="color:white"> <%= MovieList[count].returnDate %></td>
 
             <% if(typeof username=='string' && username) { %> 
-            <td class="text-center col-1" style="color:white">
-             <a href="/blockbuster/edit/<%= MovieList[count]._id %>"
-             class="btn btn-primary" style="background-color:#FFA500" >
-             <i class="fas fa-pencil-alt" ></i> Edit </a> </td>
-            <td class="text-center col-1">
-             <a href="/blockbuster/delete/<%= MovieList[count]._id %>"
-             class="btn btn-danger">
-             <i class="fas fa-trash-alt"></i> Delete </a> </td>
-         <% } %>  
+              <td class="text-center col-1" style="color:white">
+              <a href="/blockbuster/edit/<%= MovieList[count]._id %>"
+              class="btn btn-secondary" style="background-color:#FFA500" >
+              <i class="fas fa-pencil-alt" ></i> Edit </a> </td>
+              <td class="text-center col-1">
+              <a href="/blockbuster/delete/<%= MovieList[count]._id %>"
+              class="btn btn-danger">
+              <i class="fas fa-trash-alt"></i> Delete </a> </td>
+            <% } %>  
         </tr> 
       <% } %>
       </table>
       
       </div>
-      </div>
-    
- 
+    </div>
 </main>
-
-
 
 <%- include ("../partials/bottom_nav") %>
 <%- include ("../partials/footer") %>
