--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -39,9 +39,9 @@
                     id="displayName" required>
                 </fieldset><br>
                 <fieldset class="form-group text-right">
-                    <button type="submit" class="btn" value="Register" style="background-color:green;color:black"> 
+                    <button type="submit" class="btn loginbtn" value="Register" style="background-color:#FFCC00;"> 
                         <i class="fa-solid fa-user-plus"></i> Register</button>
-                    <a href="/" class="btn" style="background-color:red">
+                    <a href="/" class="btn cancelbtn">
                         <i class="fas fa-undo"></i> Cancel </a>
                 </fieldset>
             </form>
