--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -28,11 +28,11 @@
                 </fieldset>
                 <fieldset class="form-group">
                     <br />or
-                    <a href="/register">Register Here</a><br />
-                    <button type="submit" class="btn btn-success" value="Login" style="background-color:green;color:black">
+                    <a class="registerlink" href="/register">Register Here</a><br />
+                    <button type="submit" class="btn btn-success loginbtn" value="Login" style="background-color:#FFCC00;">
                         <i class="fa-solid fa-right-to-bracket"></i> Login</button>
                     <a href="/"></a>
-                        <a href="/" class="btn" style="background-color:red">
+                        <a href="/" class="btn cancelbtn">
                         <i class="fas fa-undo"></i> Cancel </a>
                     </a>
                 </fieldset>
