--- a/server/views/movie/list.ejs
+++ b/server/views/movie/list.ejs
@@ -6,12 +6,11 @@
             <h1 class="listTitle"><%= title %></h1>
             <br>
             <% if (typeof username=='string' && username) { %>
-              <a href="/blockbuster/add" class="btn btn-primary" role="button">
-                <i class="fas fa-plus-circle"></i> Rent a Movie </a>
+              <a href="/blockbuster/add" class="btn btn-primary fa-addbtn" style="background-color:#FFCC00" role="button">
+                <i class="fas fa-plus-circle fa-addbtn2"></i> Rent a Movie </a>
             <% } %>
             <br>
-            <br>
-      
+            <br>    
       <!-- displays the table headers (th) and displays table content (td)-->
       <table class="table table-bordered table-striped table-hover"  style="border: 2px solid #FFCC00">
       <% if(typeof username=='string' && username) { %>
@@ -36,21 +35,23 @@
 
       <% for(let count=0; count<MovieList.length; count++) { %> 
         <tr> 
-            <td class="text-center col-2" style="color:white"> <%= MovieList[count].user %> </td>
-            <td class="text-center col-2" style="color:white"> <%= MovieList[count].subscriptionTier %></td>
-            <td class="text-center col-2" style="color:white"> <%= MovieList[count].movieName %></td>
-            <td class="text-center col-2" style="color:white"> <%= MovieList[count].rentDate %></td>
-            <td class="text-center col-2" style="color:white"> <%= MovieList[count].returnDate %></td>
+            <td class="col-2" style="font:larger"> <%= MovieList[count].user %> </td>
+            <td class="col-2" style="color:white"> <%= MovieList[count].subscriptionTier %></td>
+            <td class="col-2" style="color:white"> <%= MovieList[count].movieName %></td>
+            <td class="col-2" style="color:white"> <%= MovieList[count].rentDate %></td>
+            <td class="col-2" style="color:white"> <%= MovieList[count].returnDate %></td>
 
             <% if(typeof username=='string' && username) { %> 
               <td class="text-center col-1" style="color:white">
+             
               <a href="/blockbuster/edit/<%= MovieList[count]._id %>"
-              class="btn btn-secondary" style="background-color:#FFA500" >
-              <i class="fas fa-pencil-alt" ></i> Edit </a> </td>
+              class="btn btn-secondary fa-edit2" style="background-color:#FFCC00">
+              <i class="fas fa-pencil-alt" ></i></a> </td>
               <td class="text-center col-1">
+             
               <a href="/blockbuster/delete/<%= MovieList[count]._id %>"
-              class="btn btn-danger">
-              <i class="fas fa-trash-alt"></i> Delete </a> </td>
+              class="btn fa-delete2">
+              <i class="fas fa-trash-alt"></i></a> </td>
             <% } %>  
         </tr> 
       <% } %>
