--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -1,7 +1,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#0b075a" >
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"> <img src="/assets/images/logo3.png" alt ="blockbuster" width="135" height="45"></a>
+    <a class="navbar-brand" href="/"> <img src="/assets/images/logo3.png" alt ="blockbuster" width="185" height="65"></a>
           
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,8 +9,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      
+      <% if(typeof username =='string' && username) { %>
+        <li class="navbar-text">
+          <i class="fas fa-2x fa-user"></i>
+          Welcome, <%= username %> 
+        </li>
 
-        <li class="nav-item">
+         <li class="nav-item">
         <% if (title == "Blockbuster")  { %>
           <a class="nav-link active fa-color" aria-current="page" href="home" style="color:#FFCC00">
         <% } else { %>
@@ -25,17 +31,35 @@
         <% } else { %>
           <a class="nav-link" aria-current="page" href="/blockbuster" > 
         <% } %>
-          <i class="fa-solid fa-ticket fa-2x"></i> Movie List </a>
+          <i class="fa-solid fa-ticket fa-2x"></i> Rental List </a>
         </li>
-
-        <% if(typeof username =='string' && username) { %>
-        <li class="navbar-text">
-        <i class="fas fa-2x fa-user"></i>
-        Welcome, <%= username %> </li>
+        
         <li class="nav-item">
           <a href="/logout" class="nav-link">
           <i class="fas fa-2x fa-sign-out-alt"></i> Logout</a></li>
+        <% 
+        
+        } else { %>
+
+         <li class="nav-item">
+        <% if (title == "Blockbuster")  { %>
+          <a class="nav-link active fa-color" aria-current="page" href="home" style="color:#FFCC00">
         <% } else { %>
+          <a class="nav-link" aria-current="page" href="/home">
+        <% } %>
+          <i class="fa-solid fa-house fa-2x"></i> Home</a>
+        </li>
+
+        <li class="nav-item">
+        <% if (title ==  "Rental List"  ) { %>
+          <a class="nav-link active fa-color" aria-current="page" href="/blockbuster" style="color:#FFCC00"> 
+        <% } else { %>
+          <a class="nav-link" aria-current="page" href="/blockbuster" > 
+        <% } %>
+          <i class="fa-solid fa-ticket fa-2x"></i> Rental List </a>
+        </li>
+
+
         <li class="nav-item">
           <a href="/login" class="nav-link">
           <i class="fas fa-2x fa-sign-in-alt"></i> Login</a></li>
