--- a/server/views/movie/list.ejs
+++ b/server/views/movie/list.ejs
@@ -30,7 +30,8 @@
           <th class="text-center col-4" style="background-color:#FFCC00"> Movie Name </th>
           <th class="text-center col-2" style="background-color:#FFCC00"> Rent Date </th>
           <th class="text-center col-2" style="background-color:#FFCC00"> Return Date </th>
-          </tr>
+        </tr>
+        <p id='signupPrompt'>Want to start renting movies? <a href="/login">Login</a> or <a href="/register">Register</a> now!<p>
       <% } %>
 
       <% for(let count=0; count<MovieList.length; count++) { %> 
